subo pre entrega 2

--- a/src/styles/CartWidget.css
+++ b/src/styles/CartWidget.css
@@ -1,8 +1,6 @@
-.cart-widget {
-    color: #e7cfbc;
-    font-size: 30px;
+.carritoBtn{
+    background-color: #e8dad7;
     cursor: pointer; 
-
 }
 
 .badge {
