--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,20 +1,23 @@
-.nav-item {
-    list-style: none;
-    padding: 10px 7px 2px 7px;
-    font-size: medium;
-    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-    display: inline-block;
-  }
-  
-  .navbar-nav li a {
+.navbar-nav{
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px; /* O el valor que desees para el espacio entre elementos */
+}
+.navbar-brand {
+  align-items: center !important;
+}
+.navbar-nav li a {
     color: black;
     text-decoration: none;
   }
-
-.nav-item a:hover {
-    color: #e7cfbc;
-}
-
 .imagen-logo {
   width: 40px;
 }
+
+@media screen and (min-width: 1200px) {
+  .navbar-expand-lg .navbar-collapse .navbar-toggler {
+    display: none;
+  }
+}
+
+
