--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -10,12 +10,13 @@
     color: black;
     text-decoration: none;
   }
+
 .imagen-logo {
   width: 40px;
 }
 
-@media screen and (min-width: 1200px) {
-  .navbar-expand-lg .navbar-collapse .navbar-toggler {
+@media screen and (min-width: 991px) {
+  .navbar-expand-lg .navbar-toggler {
     display: none;
   }
 }
